# ChangeLog for dev-python/pyechonest
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyechonest/ChangeLog,v 1.6 2014/03/22 18:57:12 kensington Exp $

  22 Mar 2014; Michael Palimaka <kensington@gentoo.org>
  -pyechonest-7.1.0.ebuild:
  Remove old.

  20 Oct 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org> metadata.xml:
  Move to maintainer-needed

  08 Jun 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  pyechonest-7.2.1.ebuild:
  Do not compress examples

  08 Jun 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  pyechonest-7.2.1.ebuild:
  Fix installation of examples

*pyechonest-7.2.1 (08 Jun 2013)

  08 Jun 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +pyechonest-7.2.1.ebuild:
  Version bump, update to EAPI5, add doc USE flag for API documentation

*pyechonest-7.1.0 (02 Jan 2013)

  02 Jan 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +pyechonest-7.1.0.ebuild, +metadata.xml:
  New ebuild for pyechonest (dependency of media-sound/beets)