@@ -1,10 +1,10 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyechonest/pyechonest-7.2.1.ebuild,v 1.3 2013/06/08 16:41:45 sochotnicky Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyechonest/pyechonest-7.2.1.ebuild,v 1.5 2014/06/28 03:57:39 idella4 Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_6,2_7} )
+PYTHON_COMPAT=( python2_7 )
 
 inherit distutils-r1
 
@@ -17,21 +17,22 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="doc examples"
 
-DEPEND="doc? ( dev-python/sphinx[${PYTHON_USEDEP}] )"
+RDEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
+DEPEND="${RDEPEND}
+	doc? ( dev-python/sphinx[${PYTHON_USEDEP}] )"
+
+python_prepare_all() {
+	# Prevent un-needed download during build
+	sed -e "s/, 'sphinx.ext.intersphinx'//" -i doc/source/conf.py || die
+	distutils-r1_python_prepare_all
+}
 
 python_compile_all() {
-	if use doc; then
-		einfo "Generation of documentation by" ${PYTHON}
-		PYTHONPATH=".." emake -C doc html || die "Generation of documentation failed"
-	fi
+	use doc && emake -C doc html
 }
 
 python_install_all() {
-	use doc && dohtml -r doc/build/html/
-
-	if use examples; then
-		docompress -x usr/share/doc/${P}/examples/
-		insinto usr/share/doc/${P}/examples
-		doins -r examples/*
-	fi
+	use doc && local HTML_DOCS=( doc/build/html/. )
+	use examples && local EXAMPLES=( examples/. )
+	distutils-r1_python_install_all
 }
